--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=utf-8"/><title>PROJEK PAW-Modento</title>Shopify Business Blueprint</title><link rel="icon" type="image/x-icon/png" href="PROJEK PAW-Modento 85525a7479794b71bd6c8e96edce8190/Untitled 1.png"><style>
+<html><head><meta http-equiv="Content-Type" content="text/html; charset=utf-8"/><title>PROJEK PAW-Modento</title><link rel="icon" type="image/x-icon/png" href="PROJEK PAW-Modento 85525a7479794b71bd6c8e96edce8190/Untitled 1.png"><style>
 /* cspell:disable-file */
 /* webkit printing magic: print all background colors */
 html {
